убрал аутлайн, убрал плейсхолдер при фокусе и реорганизовал scss

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="auth-form__password auth-form__input-wrapper password">
             <input class="password__input input" type="password" name="password" id="user-password" placeholder="Password">
-            <label class="auth-form__label" for="user-password">Password</label>
+            <label class="password__label" for="user-password">Password</label>
             <button class="password__toggle" type="button"></button>
         </div>
         <button class="auth-form__button button" type="submit">Authorise me</button>
